	FIX: Fixed missing NPC soldiers issues at some quest steps.
	FIX: Fixed the hammer stake being down before Link hits it (#142).
	REM: Removed streams disabling for the feather as it caused them to be reset everytime (#133).
	TDO: Setup the quest files for the Solarus launcher.
	TDO: Rescript the feather.
	TDO: Fix the map menu being openable when a map transition is playing (#128).
	TDO: Fix a nil value error in the inventory after buying something from Ravio (#92).
	TDO: Replace corrupt files.
	TDO: Fix "door_manager:open_when_switch_activated()" only opening the last door when there are multiple doors (#75).
	TDO: Fix the water level changing animation in the Water Temple (#56).
	TDO: Fix crash on ocarina cinematic because of an invalid animation direction (#63).
	TDO: Progressively switch enemies behaviour to ALTTD'S.
	TDO: Fix diagonal jumpers jump lengths being too high in the mountains (#38).
	TDO: Fix not enough memory issues on MacOS (#39).
	TDO: Fix low framerate in rooms with lots of conveyor belts (#42).
	TDO: Update the statistics menu with treasures from the Excel file (#46).
	TDO: Fix the HUD clock showing the wrong hour randomly (#114).

Alpha 1.17.1 (//23) "Needlefish Update":
	TDO: Remove work *.xcf and *.psd files from the data files.
	TDO: Add the ability to switch shaders through the options menu (#119).
	TDO: Add night entities to maps (#67).
	TDO: Add hook entities to trees (#103).
	TDO: Finish the remaining houses (#104).
	TDO: Add remaining inside maps coordinates (#105).
	TDO: Add items treasure and inventory missing dialogues (#9).
	TDO: Fix victory animation not being synchronised with Link movement (#10).
	TDO: Clean up unused files (#98).
	TDO: Fix Link being invisible after fighting boss (#16).
	TDO: Fix missing animations for other tunics (#47).
	TDO: Update the title screen (#50).
	TDO: Change the Master Sword sprite on the title screen (#50).
	TDO: Change all the enemies in the Hyrule Field (#81).