@@ -1443,10 +1443,10 @@ enemy{
 enemy{
   name = "a",
   layer = 0,
-  x = 192,
-  y = 157,
+  x = 168,
+  y = 117,
   direction = 0,
-  breed = "boss/spectral_ganon",
+  breed = "outside/blob_yellow",
 }
 
 tile{
