@@ -384,6 +384,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	REM: Removed streams disabling for the feather as it caused them to be reset everytime (#133).
 	TDO: Setup the quest files for the Solarus launcher.
 	TDO: Rescript the feather.
+	TDO: Fix Bari enemies animation not being accurate to ALTTP (#143).
 	TDO: Fix the map menu being openable when a map transition is playing (#128).
 	TDO: Fix a nil value error in the inventory after buying something from Ravio (#92).
 	TDO: Replace corrupt files.
